# Practica-An-lisis-comparativo-de-robustez-entre-Momentos-de-Hu-y-Zernike

./: .gitignore  GUIA_PRACTICA_3_VISION_POR_COMPUTADOR.md  README.md
parte1/: notebook.ipynb
parte2/: CMakeLists.txt  README.md  compile.sh  main.cpp
parte2/android/: settings.gradle.kts
parte2/android/app/: build.gradle.kts
parte2/android/app/src/main/assets/: corpus.csv
parte2/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
parte2/android/app/src/main/java/com/example/android_app/: DrawingView.kt  MainActivity.kt
parte2/android/app/src/main/res/layout/: activity_main.xml
parte2/android/gradle/wrapper/: gradle-wrapper.properties
